# Authentication-Socials

./: db.sqlite3  main.py  pyproject.toml
config/: celery.py  settings.py  urls.py
users/: consumers.py  task.py  urls.py  views.py
